--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "life-management-api",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "Life management API",
   "keywords": [
     "life",
@@ -8,16 +8,20 @@
   ],
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
-  "main": ".eslintrc.js",
+  "main": "src/server.ts",
   "scripts": {
+    "dev": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "express": "^5.0.1",
-    "mongoose": "^8.9.5"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
-    "@types/node": "^22.10.10"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.10",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
