api actually working now...

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "life",
     "management"
   ],
+  "type": "module",
   "license": "ISC",
   "author": "",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "node --loader ts-node/esm src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
