--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "noEmit": true,
         "moduleDetection": "force",
         "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": true,
         "noImplicitReturns": true,
         "noUncheckedIndexedAccess": true,
         "noUnusedLocals": false,
