--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "connect-redis": "^8.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.0.1",
+    "express-session": "^1.18.1",
+    "keycloak-connect": "^26.1.1",
+    "redis": "^4.7.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^22.10.10",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
